--- a/login.html
+++ b/login.html
@@ -11,13 +11,19 @@
     />
   </head>
   <body>
-    <div class="login-form">
+    <div class="wrapper">
       <form action="">
         <h1>login</h1>
         <div class="input-box">
           <input type="text" placeholder="Username" required />
           <i class="bx bxs-user"></i>
         </div>
+
+        <div class="input-box">
+          <input type="email" placeholder="Email" required />
+          <i class="bx bxs-envelope"></i>
+        </div>
+
         <div class="input-box">
           <input type="password" placeholder="Password" required />
           <i class="bx bxs-lock-alt"></i>
@@ -28,7 +34,7 @@
         </div>
         <button type="submit" class="btn">login</button>
         <div class="register-link">
-          <p>Don't have an account?<a href="#">register</a></p>
+          <p>Don't have an account?<a href="#"> Register</a></p>
         </div>
       </form>
     </div>
