--- a/login.html
+++ b/login.html
@@ -15,26 +15,30 @@
       <form action="">
         <h1>login</h1>
         <div class="input-box">
-          <input type="text" placeholder="Username" required />
+          <input  class="Username"    type="text" placeholder="Username" required />
           <i class="bx bxs-user"></i>
         </div>
 
         <div class="input-box">
-          <input type="email" placeholder="Email" required />
+          <input  class="Email"    type="email" placeholder="Email" required />
           <i class="bx bxs-envelope"></i>
         </div>
 
         <div class="input-box">
-          <input type="password" placeholder="Password" required />
+          <input  class="Password"     type="password" placeholder="Password" required />
+          <i class="bx bxs-lock-alt"></i>
+        </div>
+        <div class="input-box">
+          <input   class="Confirm-password"   type="password" placeholder="Confirm password" required />
           <i class="bx bxs-lock-alt"></i>
         </div>
         <div class="remember-forgot">
-          <label><input type="checkbox" />Remember me</label>
-          <a href="#">Forgot password</a>
+          <!--<label><input type="checkbox" />Confirm password</label>
+          <a href="#">Forgot password</a>-->
         </div>
         <button type="submit" class="btn">login</button>
         <div class="register-link">
-          <p>Don't have an account?<a href="#"> Register</a></p>
+          <!--<p>Don't have an account?<a href="#"> Register</a></p>-->
         </div>
       </form>
     </div>
