--- a/login.html
+++ b/login.html
@@ -15,21 +15,31 @@
       <form action="">
         <h1>login</h1>
         <div class="input-box">
-          <input  class="Username"    type="text" placeholder="Username" required />
+          <input class="Username" type="text" placeholder="Username" required />
           <i class="bx bxs-user"></i>
         </div>
 
         <div class="input-box">
-          <input  class="Email"    type="email" placeholder="Email" required />
+          <input class="Email" type="email" placeholder="Email" required />
           <i class="bx bxs-envelope"></i>
         </div>
 
         <div class="input-box">
-          <input  class="Password"     type="password" placeholder="Password" required />
+          <input
+            class="Password"
+            type="password"
+            placeholder="Password"
+            required
+          />
           <i class="bx bxs-lock-alt"></i>
         </div>
         <div class="input-box">
-          <input   class="Confirm-password"   type="password" placeholder="Confirm password" required />
+          <input
+            class="Confirm-password"
+            type="password"
+            placeholder="Confirm password"
+            required
+          />
           <i class="bx bxs-lock-alt"></i>
         </div>
         <div class="remember-forgot">
@@ -42,5 +52,6 @@
         </div>
       </form>
     </div>
+    <script src="login.js"></script>
   </body>
 </html>
