--- a/login.html
+++ b/login.html
@@ -15,7 +15,13 @@
       <form action="">
         <h1>login</h1>
         <div class="input-box">
-          <input class="Username" type="text" placeholder="Username" required />
+          <input
+            class="Username"
+            id="user"
+            type="text"
+            placeholder="Username"
+            required
+          />
           <i class="bx bxs-user"></i>
         </div>
 
